chore: add methods in UsuarioAutenticadoPersistenceEntity